scss/comments.scss
/*********** FULL COMMENTS ***********/
// Used on `project_view.html`

.comment-list {
  min-height: 5rem;
}

.comment-compact, .comment {

  p.content {
    font-size: 0.9rem;
    font-weight: 200;
    margin-top: rem-calc(5px);
    margin-bottom: 0;
    &.deleted {
      background-color: $gcl-lightgray;
      color: $gcl-midgray;
    }

    padding-top:    rem-calc(7px);
    padding-bottom: rem-calc(7px);
  }
}

/*********** COMPACT COMMENTS ***********/

// Comment list used on `trainingbit_cover.html` and `shares_overview.html`
.comment-list-compact {
  .replies {
    // background-color: $gcl-lightgray;
    margin-left: rem-calc(50px);

    .comment {
      background-color: #EEE;
      margin-bottom: rem-calc(8px);
      margin: 0;
    }
  }
}


.comment-compact {
  margin-bottom: 1rem;

  p.content {
    // font-size: rem-calc(13px);
    font-size: 0.9rem;
    font-weight: 200;
    margin-top: rem-calc(5px);
    margin-bottom: 0;
    background-color: $gcl-comment-color;
    &.deleted {
      background-color: $gcl-lightgray;
      color: $gcl-midgray;
    }

    padding-left:   rem-calc(5px);
    padding-top:    rem-calc(7px);
    padding-bottom: rem-calc(7px);
    // padding-left: rem-calc(4px);
  }

  div.from {
    text-align: right;
    font-size: rem-calc(11px);
    color: $gcl-midgray;
    margin-top: rem-calc(5px);

    h6 {
      font-size: rem-calc(11px);
    }
  }

  .moderation {
    float: right;
    display: inline-block;
    font-size: rem-calc(12px);

    a { color: $gcl-lightgray; }
  }


}

.comment-form-container {
  position: relative;
  margin-top: 1rem;
  background-color: $gcl-comment-color;
  min-height: 6rem;

  .not-logged-in {
    @extend %dead-center;
    height: 1em;
    width: 10rem;
    text-align: center;
  }

  &.reply {
    margin-left: 3rem;
  }
}

.comment-form {
  padding: 1rem;

  textarea, button {
    display: inline-block;
    margin-bottom: 0;
  }
  textarea {
    width: 80%;
  }
  button {
    vertical-align: bottom;
    padding: rem-calc(7px);
    background-color: $gcl-red;
    text-transform: uppercase;
    font-size: $button-font-size;
  }
}

